docs/css/style.css
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Poppins", sans-serif;
  overflow-x: hidden;
}

h1 {
  text-align: center;
  margin-top: 50px;
  margin-bottom: 50px;
  position: relative;
}

h2 {
  text-align: center;
  margin-top: 50px;
  margin-bottom: 50px;
  position: relative;
  display: inline-block;
}

h1::after,
h2::after {
  content: "";
  position: absolute;
  left: 50%;
  bottom: -20px;
  width: 70px;
  height: 4px;
  background-color: #000;
  transform: translateX(-50%);
}

h3 {
  text-align: center;
  font-size: 20px;
  margin: 0;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #333;
  text-align: left;
}

@media screen and (min-width: 768px) {
  nav {
    text-align: center;
  }
}

nav a {
  color: #fff;
  text-decoration: none;
  margin: 0 10px;
  font-size: 13px;
}

nav a.active {
  color: rgb(236, 41, 106);
}

nav a:hover {
  text-decoration: underline;
}

.navbar {
  width: 100%;
  padding: 0.5rem;
  border-bottom: 3px solid #4caf50;
}

.portfolio {
  display: flex;
  flex-wrap: wrap;
  gap: 16px;
  justify-content: center;
  animation: fadeIn 1.5s;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 60px;
}

.portfolio-item {
  width: 100%;
  width: 411px;
  height: 311px;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
  padding: 16px;
  border-radius: 8px;
  transition: transform 0.3s;
  position: relative;
  overflow: hidden;
}

.portfolio-item:hover {
  transform: translateY(-10px);
  filter: brightness(85%);
}

.hover-content {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.6);
  color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  opacity: 0;
  transition: opacity 0.3s;
}

.hover-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.hover-info p {
  color: rgb(236, 41, 106);
}

.portfolio-item img {
  max-width: 100%;
  transition: transform 0.3s;
  border-radius: 4px;
  margin-bottom: 8px;
  object-fit: cover;
  height: 100%;
}

.portfolio-item:hover img {
  transform: scale(1.1);
}

.portfolio-item:hover .hover-content {
  opacity: 1;
}

.portfolio_link {
  text-decoration: none;
  background: #fff;
  font-size: 20px;
  padding: 7px 15px;
  border: 1px solid rgb(236, 41, 106);
  transition: color 0.3s;
  color: rgb(236, 41, 106);
}

.portfolio_link:hover {
  background-color: rgb(236, 41, 106);
  color: #fff;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.7);
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.modal-content {
  display: block;
  width: 100%;
  max-width: 600px;
  position: relative;
}

@media screen and (min-width: 768px) {
  .modal-content {
    max-width: 800px;
  }
}

.close-btn,
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 5px 25px;
  font-weight: bold;
  font-size: 36px;
  user-select: none;
  z-index: 2;
}

.close-btn {
  right: 0;
  top: 10px;
  color: white;
}

.next {
  right: 0;
  background-color: #5b595a;
  color: #fff;
  font-weight: bold;
}

.prev {
  left: 0;
  background-color: #5b595a;
  color: #fff;
  font-weight: bold;
}

.modal-caption {
  margin-top: 3px;
  padding: 16px 0;
  background-color: #fff;
  width: 100%;
  max-width: 600px;
}

.modal-caption h3,
.modal-caption span,
.modal-caption p {
  text-align: left;
  margin-left: 20px;
}

.modal-caption h3 {
  font-size: 25px;
  margin-top: 20px;
}

.modal-caption p {
  padding-top: 10px;
  padding-right: 60px;
}

.modal-caption span {
  font-size: 15px;
  font-weight: bold;
  position: relative;
  color: rgb(0, 0, 0, 0.3);
}

.modal-caption span::after {
  content: "";
  position: absolute;
  left: -2px;
  bottom: -10px;
  width: 550px;
  height: 0.5px;
  background-color: rgb(0, 0, 0, 0.1);
}

@media screen and (min-width: 768px) {
  .modal-caption {
    max-width: 800px;
  }
  .modal-caption span::after {
    width: 750px;
  }
}

.view-site-btn {
  text-align: center;
  width: 15%;
  display: block;
  margin-left: 20px;
  background-color: rgb(236, 41, 106);
  color: #fff;
  padding: 10px 15px;
  text-decoration: none;
  transition: 0.3s all;
  font-size: 10px;
  font-weight: bold;
}

.view-site-btn:hover {
  background-color: #fff;
  color: rgb(236, 41, 106);
}

@media screen and (min-width: 768px) {
  .view-site-btn {
    font-size: 15px;
  }
}

footer {
  background-color: rgb(39, 70, 111);
  color: #fff;
}

footer p {
  text-align: center;
}

.footer_link {
  color: #fff;
  text-decoration: none;
}

.footer_link:hover {
  text-decoration: underline;
}

.site-container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.footer {
  margin-top: auto;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.intro {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 20px;
  text-align: center;
}

.intro p {
  margin: 0;
}

@media screen and (min-width: 768px) {
  .intro {
    font-size: 35px;
  }
}

.dot {
  position: absolute;
  width: 10px;
  height: 10px;
  background-color: rgb(253, 253, 253);
  border-radius: 50%;
  opacity: 0.5;
}

.intro_important {
  color: rgb(236, 41, 106);
}

.intro {
  background: #333;
  color: #fff;
}

.view-work-btn {
  color: #fff;
  border: 2px solid #fff;
  padding: 10px 20px;
  text-decoration: none;
  transition: all 0.3s;
  margin-top: 1rem;
  font-size: 16px;
}

.view-work-btn:hover {
  background: #1ab9e1;
  color: #333;
  border: 2px solid #1ab9e1;
}

/* About */
.about {
  min-height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 20px;
  text-align: center;
  justify-content: center;
  padding: 20px 0;
  background-color: #f4f4f4;
  padding-left: 10px;
  padding-right: 10px;
}

@media screen and (min-width: 768px) {
  .about {
    padding: 0;
    position: relative;
    justify-content: flex-start;
  }
}

@media screen and (min-width: 1024px) {
  .about {
    padding-bottom: 5rem;
  }
}

.icons {
  margin-top: 2rem;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
  max-width: 900px;
  gap: 20px;
}

.icon-item {
  flex-basis: calc(50% - 20px);
  text-align: center;
  padding: 0 10px;
}

@media screen and (min-width: 768px) {
  .icons {
    flex-wrap: nowrap;
    gap: 40px;
  }
}

.icon-item img {
  width: 70px;
  color: #2c3a47;
}

.icon-item p,
.icon-item span {
  color: #2c3a47;
}

.icon-item p {
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}

.icon-item span {
  font-size: 10px;
}

@media screen and (min-width: 768px) {
  .icon-item p {
    font-size: 1.5rem;
  }
  .icon-item span {
    font-size: 15px;
  }
}

.profile {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 40px;
  width: 100%;
}

.profile img {
  object-fit: cover;
  width: 240px;
  clip-path: circle(45%);
}

.profile p {
  margin: 0;
  font-size: 10px;
}

@media screen and (min-width: 768px) {
  .profile h3 {
    font-size: 25px;
  }
  .profile p {
    font-size: 15px;
  }
}

.profile_link {
  text-decoration: none;
  font-size: 10px;
  color: #4caf50;
}

@media screen and (min-width: 768px) {
  .profile_link {
    font-size: 15px;
  }
}
.profile_link:hover {
  text-decoration: underline;
}

.profile_textcontainer {
  margin-top: 10px;
}

.skills {
  margin-top: 3rem;
  margin-bottom: 3rem;
  display: flex;
  flex-direction: column;
  width: 100%;
}

@media screen and (min-width: 1024px) {
  .skills {
    margin-bottom: 0;
  }
}

.skill {
  margin-bottom: 10px;
  display: flex;
  flex-direction: row;
}

.skill-name {
  flex: 0 0 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 10px;
  color: #fff;
  background-color: rgb(76, 175, 80, 0.6);
}

.progress {
  flex-grow: 1;
  background-color: #e0e0e0;
  border-radius: 3px;
  height: 20px;
  overflow: hidden;
  position: relative;
}

.progress-bar {
  background-color: #4caf50;
  height: 100%;
  transition: width 0.4s ease;
}

.progress-bar span {
  display: none;
  position: absolute;
  top: 1px;
  right: 10px;
  color: rgb(0, 0, 0, 0.4);
  font-size: 15px;
}

@media screen and (min-width: 768px) {
  .progress-bar span {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .about_article {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 40px;
  }
}

.main {
  margin-bottom: 5rem;
}

